// Copyright 2025 Cofide Limited.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package proto.federated_service.v1alpha1;

option go_package = "github.com/cofide/cofide-api-sdk/gen/go/proto/federated_service/v1alpha1";

message FederatedService {
  string id = 1;
  string name = 2;
  string namespace = 3;
  string cluster_name = 4;
  string trust_domain = 5;
  string gateway_ip = 6 [deprecated = true];
  map<string, string> workload_labels = 7;
  repeated string exported_trust_domains = 8;
  uint32 port = 9;
  repeated GatewayEntry gateway_entries = 10;
}

message GatewayEntry {
  string hostname = 1;
  string type = 2;
  string ip = 3;
  int32 port = 4;
}


